C2's conditional move optimization fails with assert(bol->Opcode() == Op_Bool) failed

XMLWordPrintable

    • b17

        # Error: assert(bol->Opcode() == Op_Bool) failed

        Current CompileTask:
        C2: 388 2 b Test2::test (86 bytes)

        Stack: [0x00007fbfa0626000,0x00007fbfa0727000], sp=0x00007fbfa0721080, free space=1004k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1874417] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x2c7
        V [libjvm.so+0x187527f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
        V [libjvm.so+0xb4f4c0] report_vm_error(char const*, int, char const*, char const*, ...)+0x100
        V [libjvm.so+0x12989c8] PhaseIdealLoop::conditional_move(Node*)+0x2d8
        V [libjvm.so+0x1299d13] PhaseIdealLoop::split_if_with_blocks_pre(Node*)+0xa3
        V [libjvm.so+0x129b59c] PhaseIdealLoop::split_if_with_blocks(VectorSet&, Node_Stack&, bool)+0x10c
        V [libjvm.so+0x12927d2] PhaseIdealLoop::build_and_optimize(bool, bool, bool)+0x10b2
        V [libjvm.so+0xa735e8] Compile::Optimize()+0xbd8
        V [libjvm.so+0xa74a64] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xfc4
        V [libjvm.so+0x876771] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xd1
        V [libjvm.so+0xa81ad3] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x403
        V [libjvm.so+0xa82af7] CompileBroker::compiler_thread_loop()+0x377
        V [libjvm.so+0x17b9717] JavaThread::thread_main_inner()+0x2c7
        V [libjvm.so+0x17b9a59] JavaThread::run()+0x239
        V [libjvm.so+0x14c3fc0] thread_native_entry(Thread*)+0x100

              Assignee:
              Tobias Hartmann
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: