8231223: C2's conditional move optimization fails with assert(bol->Opcode() == Op_Bool) failed

Bail out if the range check If has an Opaque4Node input instead of a BoolNode.

Reviewed-by: roland, kvn